--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,10 +70,10 @@ publish:
   script:
     - TAG_COMMIT=$(echo $TAG_COMMIT | tr '[:upper:]' '[:lower:]')
     - TAG_LATEST=$(echo $TAG_LATEST | tr '[:upper:]' '[:lower:]')
-    - docker-compose-build -t $TAG_COMMIT -t $TAG_LATEST .
+    - docker compose build -t $TAG_COMMIT -t $TAG_LATEST .
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker-compose-push $TAG_COMMIT
-    - docker-compose-push $TAG_LATEST
+    - docker compose push $TAG_COMMIT
+    - docker compose push $TAG_LATEST
 
 deploy:
   image: alpine:latest
@@ -86,8 +86,8 @@ deploy:
     - chmod 600 $ID_RSA
     - apk update && apk add openssh-client
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker-compose-pull $TAG_COMMIT"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker-compose up praksisplasslista"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose pull $TAG_COMMIT"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose up praksisplasslista"
   environment:
     name: production
     url: http://129.241.153.29
