--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ publish:
   script:
     - TAG_COMMIT=$(echo $TAG_COMMIT | tr '[:upper:]' '[:lower:]')
     - TAG_LATEST=$(echo $TAG_LATEST | tr '[:upper:]' '[:lower:]')
-    - docker compose build .
+    - docker compose build web
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker compose push
 
