--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
     "server-only": "^0.0.1",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "daisyui": "^4.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
@@ -37,7 +38,6 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "bun-types": "^1.0.33",
-    "daisyui": "^4.7.3",
     "eslint-config-next": "14.1.3",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.0.0",
