--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ install:
     - npm install --also=dev
     - npm install --save next
     - npm install --save-dev typescript @types/react @types/node prettier
+
 build:
   stage: build
   script:
@@ -57,10 +58,6 @@ format:
   script:
     - npm run format
 
-variables:
-  TAG_LATEST: $CI_COMMIT_REF_NAME:latest
-  TAG_COMMIT: $CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA
-
 publish:
   image: docker:latest
   stage: publish
@@ -69,10 +66,8 @@ publish:
   variables:
     DOCKER_TLS_CERTDIR: ""
   script:
-    - TAG_COMMIT=$(echo $TAG_COMMIT | tr '[:upper:]' '[:lower:]')
-    - TAG_LATEST=$(echo $TAG_LATEST | tr '[:upper:]' '[:lower:]')
     - docker compose -f docker-compose.prod.yaml build
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker compose -f docker-compose.prod.yaml push
 
 deploy:
