--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,8 +80,9 @@ publish:
   variables:
     DOCKER_TLS_CERTDIR: ""
   script:
-    - docker compose -f docker-compose.prod.yaml build
+    - docker logout
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker compose -f docker-compose.prod.yaml build
     - docker compose -f docker-compose.prod.yaml push
     - docker logout
 
