--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,6 @@ format:
   stage: format
   script:
     - npm run format
-    - echo "$CI_REGISTRY"
 
 publish:
   image: docker:latest
@@ -67,9 +66,11 @@ publish:
   variables:
     DOCKER_TLS_CERTDIR: ""
   script:
-    - docker compose -f docker-compose.prod.yaml build
+    - docker logout
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker compose -f docker-compose.prod.yaml build
     - docker compose -f docker-compose.prod.yaml push
+    - docker logout
 
 deploy:
   image: alpine:latest
