--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,14 +77,14 @@ deploy:
   stage: deploy
   tags:
     - deployment
-  before_script:
-    - apk add --update --no-cache git
   script:
     - chmod 600 $ID_RSA
     - apk update && apk add openssh-client
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose -f docker-compose.prod.yaml pull $TAG_COMMIT"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose -f docker-compose.prod.yaml up praksisplasslista"
+    - scp -i $ID_RSA -o StrictHostKeyChecking=no docker-compose.prod.yaml deployer@129.241.153.29:/home/deployer  
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 "docker compose -f docker-compose.prod.yaml up --env-file .env -e CI_REGISTRY_IMAGE=$CI_REGISTRY_IMAGE -e CI_COMMIT_SHORT_SHA=$CI_COMMIT_SHORT_SHA"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 "docker logout"
+
   environment:
     name: production
     url: http://129.241.153.29
