--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/x-charts": "^7.1.1",
     "@syncfusion/ej2-react-gantt": "^25.1.35",
+    "@types/react-router-dom": "^5.3.3",
     "bcrypt": "^5.1.1",
     "eslint": "^8.0.0",
     "knex": "^3.1.0",
@@ -26,6 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.23.0",
     "server-only": "^0.0.1",
     "tailwind": "^4.0.0"
   },
