--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,8 @@ format:
 
 publish:
   image: docker:latest
+  tags:
+    - dind
   stage: publish
   services:
     - docker:dind
@@ -75,6 +77,9 @@ publish:
 deploy:
   image: alpine:latest
   stage: deploy
+  rules: 
+    - needs:
+        - publish
   tags:
     - deployment
   script:
